# claude-code-tools

./: .gitignore  CHANGELOG.md  CLEAN_EXECUTION_PR.md  CLEAN_INTERFACE_ENHANCEMENT_PR.md  GPT5_CODEX_REVIEW.md  MODEL_COMPARISON.md  MULTI_MODEL_CONSENSUS.md  Makefile  PROPOSAL-exit-code-extraction.md  PR_SUMMARY.md  PULL_REQUEST.md  README.md  RECOMMENDED_FIX.md  SONNET4.5_REVIEW.md  SONNET4.5_REVISED_ANALYSIS.md  SONNET4_CODE_REVIEW.md  TECHNICAL_ISSUES_SUMMARY.md  clean-execution-patch.patch  clean-execution-pr.patch  demo_hide_transmission.py  demo_hide_transmission_proper.py  find-claude-session.md  hatch_build.py  hook-settings.json  pyproject.toml  tmux-cli-instructions.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex/workflows/: architect-workflow-monitor-cli.js  certify-workflow-monitor-cli.js  continue-workflow-monitor-cli.js  finish-workflow-monitor-cli.js
.github/workflows/: deploy-docs.yml
claude_code_tools/: __init__.py  aichat.py  codex_server.py  codex_server_cli.py  codex_server_fingerprint.py  codex_server_generation.py  codex_server_legacy.py  codex_server_models.py  codex_server_process.py  codex_server_reservation.py  codex_server_retry.py  codex_server_reuse.py  codex_server_state.py  codex_server_supervisor.py  codex_server_worker.py  dotenv_vault.py  env_safe.py  export_session.py  find_claude_session.py  find_codex_session.py  find_session.py  gdoc2docx.py  gsheet2csv.py  md2gdoc.py  port_claude_noise.py  port_claude_to_codex.py  port_codex_flatten.py  port_codex_to_claude.py  port_service.py  resolve_session.py  resolve_session_names.py  resolve_session_render.py  search_index.py  session_menu_cli.py  session_utils.py  tmux_cli_controller.py  tmux_execution_helpers.py  tmux_remote_controller.py  trim_in_place.py  trim_session.py  (+15 more)
claude_code_tools/agent_tunnel/: __init__.py  backends.py  chat_core.py  chat_types.py  cli.py  codex_backend.py  codex_session.py  config.py  convert.py  discord_bot.py  locking.py  paths.py  publishing.py  registry.py  session.py  slack_bot.py  store.py  tmux.py  trust.py
claude_code_tools/cc2opencode/: __init__.py  cli.py  detect.py  models.py
claude_code_tools/msg/: __init__.py  cli.py  hooks.py  models.py  prompt_detect.py  store.py  watcher.py
claude_code_tools/voice_type/: __init__.py  app.py  cli.py  config.py  engine_parakeet.py  engine_parakeet_mlx.py  engines.py  hotkey.py  inject.py  logic.py  overlay.py  setup_wizard.py
docs/: agent-tunnel-slack-spec.md  agent-tunnel-spec.md  clean-execution-interface.md  execute_clean-example.py  find-claude-session-improvements-plan.md  find-claude-session-improvements.md  intercom-spec.md  local-llm-setup.md  msg-phase-a-plan.md  msg-plan-v2.md  tmux-cli-instructions.md  trim-diagram.md
docs-site/: .gitignore  astro.config.mjs  node_modules  package-lock.json  package.json
docs-site/.astro/: content.d.ts
hooks/: bash_hook.py  env_file_protection_hook.py  error_websearch_hook.py  file_size_conditional_hook.py  git_add_block_hook.py  git_checkout_safety_hook.py  git_commit_block_hook.py  grep_block_hook.py  hook_utils.py  posttask_subtask_flag.py  pretask_subtask_flag.py  rm_block_hook.py  todo_sequential_hook.py
node_ui/: package-lock.json  package.json
plugins/: CHANGELOG.md
plugins/agent-tunnel/: README.md
plugins/aichat/: README.md
plugins/cctools/: README.md
release-notes/: v1.18.0-session-port-and-resolver.md  v1.19.0-voice-type.md
rust-search-ui/: Cargo.toml
scripts/: fcs-codex-function.sh  fcs-function.sh  fs-function.sh  statusline.sh
tests/: benchmark_hooks.py  conftest.py  manual_test_hide_transmission.py  resolve_session_helpers.py  test_action_handler_claude_home.py  test_agent_tunnel.py  test_agent_tunnel_backends.py  test_agent_tunnel_codex.py  test_agent_tunnel_codex_hardening.py  test_aichat_claude_home.py  test_bash_hook.py  test_chat_core.py  test_cli.py  test_cli_lifecycle.py  test_codex_server.py  test_codex_server_atomic_handoff.py  test_codex_server_cli.py  test_codex_server_fingerprint.py  test_codex_server_hardening.py  test_codex_server_probe_safety.py  test_codex_server_review_regressions.py  test_codex_server_upgrade_recovery.py  test_discord_bot.py  test_dotenv_vault.py  test_env_file_protection_hook.py  test_env_safe.py  test_error_websearch_hook.py  test_file_hooks.py  test_find_claude_session.py  test_find_codex_session.py  test_find_session.py  test_find_session_filtering.py  test_find_sessions.py  test_git_hooks.py  test_hatch_build.py  test_hide_transmission.py  test_hook_utils.py  test_msg_hooks.py  test_msg_prompt_detect.py  test_msg_store.py  (+47 more)
(+119 files in other folders)
