[project]
name = "claude-code-tools"
version = "1.19.1"
description = "Collection of tools for working with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.6",
    "click>=8.0.0",
    "commitizen>=4.8.3",
    "discord.py>=2.4.0",
    "fire>=0.5.0",
    "mcp>=1.13.0",
    "pytest>=9.0.1",
    "pyyaml>=6.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "tantivy>=0.22.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = ["commitizen>=3.0.0"]
gdocs = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "Pillow>=10.0.0",
]
voice = [
    "moonshine-voice>=0.0.69",
    "pynput>=1.7.7",
]
voice-parakeet = [
    "pynput>=1.7.7",
    # 1.13.x wheels are missing their bundled onnxruntime dylib on
    # macOS arm64 (dlopen fails); 1.12.x splits the native libs into
    # sherpa-onnx-core, which some resolvers miss (uv caches wheel
    # metadata without it) — declare it explicitly.
    "sherpa-onnx>=1.12.0,<1.13",
    "sherpa-onnx-core>=1.12.0,<1.13",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
]
voice-mlx = [
    "pynput>=1.7.7",
    "parakeet-mlx>=0.5.0",
    # Resolver guard: without it uv can backtrack through parakeet-mlx
    # -> librosa -> numba to a 2021 llvmlite that cannot build on
    # modern Python ("Cannot install on Python version 3.13...").
    "numba>=0.61",
    # sherpa-onnx supplies the Silero VAD used for segmentation.
    "sherpa-onnx>=1.12.0,<1.13",
    "sherpa-onnx-core>=1.12.0,<1.13",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = ["hatchling==1.28.0"]

[project.scripts]
# Unified session management interface
# All session commands accessible via: aichat <subcommand>
aichat = "claude_code_tools.aichat:main"

# Non-session utilities
vault = "claude_code_tools.dotenv_vault:main"
tmux-cli = "claude_code_tools.tmux_cli_controller:main"
env-safe = "claude_code_tools.env_safe:main"
md2gdoc = "claude_code_tools.md2gdoc:main"
gdoc2md = "claude_code_tools.gdoc2md:main"
gdoc2docx = "claude_code_tools.gdoc2docx:main"
csv2gsheet = "claude_code_tools.csv2gsheet:main"
gsheet2csv = "claude_code_tools.gsheet2csv:main"
fix-session = "claude_code_tools.fix_session:main"
msg = "claude_code_tools.msg.cli:main"
msg-hook = "claude_code_tools.msg.hooks:main"
agent-tunnel = "claude_code_tools.agent_tunnel.cli:main"
codex-server = "claude_code_tools.codex_server_cli:server_main"
codex-dynamic = "claude_code_tools.codex_server_cli:dynamic_main"
codex-workflows = "claude_code_tools.workflow_cli:main"
voice-type = "claude_code_tools.voice_type.cli:main"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
# Runs hatch_build.py to prepare locked Node dependencies for wheels.

[tool.hatch.build]
# Use explicit artifact inputs rather than VCS ignore rules.
ignore-vcs = true
include = [
    "claude_code_tools/**/*.py",
    "docs/*.md",
    "node_ui/menu.js",
    "node_ui/action_config.js",
    "node_ui/package.json",
    "node_ui/package-lock.json",
    "claude_code_tools/action_rpc.py",
]
exclude = [
    "demos/",
    "*.mp4",
    "*.gif",
    "*.screenstudio/",
    ".claude/",
    "claude-code-router/",
    "reference/",
    "ghostty",
    # Exclude git/venv/cache dirs that would otherwise be included
    ".git/",
    ".venv/",
    "__pycache__/",
    "*.pyc",
    ".pytest_cache/",
    "*.egg-info/",
    "/dist/",
    "/build/",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require API calls)",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.19.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "claude_code_tools/__init__.py:__version__"
]
update_changelog_on_bump = false
